Remove ModLauncher module, and remove ML from the tests